revenueiq_infrastructure/envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9901

static_resources:
  listeners:
    - name: http_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                route_config:
                  name: http_redirect_route
                  virtual_hosts:
                    - name: redirect_service
                      domains: ["testing.dineandbites.com", "*"]
                      routes:
                        - match:
                            prefix: "/"
                          redirect:
                            https_redirect: true
                            port_redirect: 443
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

    - name: https_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 443
      filter_chains:
        - transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                tls_certificates:
                  - certificate_chain:
                      filename: /etc/envoy/certs/tls.crt
                    private_key:
                      filename: /etc/envoy/certs/tls.key
          filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_https
                codec_type: AUTO
                access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: /dev/stdout
                      log_format:
                        json_format:
                          timestamp: "%START_TIME%"
                          client_ip: "%DOWNSTREAM_REMOTE_ADDRESS%"
                          method: "%REQ(:METHOD)%"
                          path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                          response_code: "%RESPONSE_CODE%"
                          duration_ms: "%DURATION%"
                          user_agent: "%REQ(USER-AGENT)%"
                          upstream_cluster: "%UPSTREAM_CLUSTER%"
                  - name: envoy.access_loggers.http_grpc
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.grpc.v3.HttpGrpcAccessLogConfig
                      common_config:
                        log_name: "monitoring_service_log"
                        grpc_service:
                          envoy_grpc:
                            cluster_name: monitoring_service_cluster
                        transport_api_version: V3
                route_config:
                  name: https_route
                  virtual_hosts:
                    - name: api_gateway
                      domains: ["testing.dineandbites.com", "*"]
                      routes:
                        - match:
                            path: "/"
                          direct_response:
                            status: 200
                            body:
                              inline_string: '{"Message":"Welcome to RevenueIQDynamics API Gateway via Envoy"}'
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                              disabled: true
                        - match:
                            prefix: "/healthz"
                          direct_response:
                            status: 200
                            body:
                              inline_string: '{"status":"healthy","service":"envoy"}'
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                              disabled: true
                            envoy.filters.http.local_ratelimit:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                              stat_prefix: local_rate_limit_healthz
                              token_bucket:
                                max_tokens: 10000
                                tokens_per_fill: 10000
                                fill_interval: 1s
                        - match:
                            prefix: "/api/auth/health"
                          route:
                            cluster: auth_service_http
                            timeout: 10s
                            retry_policy:
                              retry_on: connect-failure,refused-stream,reset
                              num_retries: 3
                              retry_back_off:
                                base_interval: 0.1s
                                max_interval: 1s
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                              disabled: true
                            envoy.filters.http.local_ratelimit:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                              stat_prefix: local_rate_limit_auth_health
                              token_bucket:
                                max_tokens: 10000
                                tokens_per_fill: 10000
                                fill_interval: 1s
                        - match:
                            prefix: "/api/auth/signup/user"
                          route:
                            cluster: auth_service_http
                            timeout: 10s
                            retry_policy:
                              retry_on: connect-failure,refused-stream,reset
                              num_retries: 3
                              retry_back_off:
                                base_interval: 0.1s
                                max_interval: 1s
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                              disabled: true
                        - match:
                            prefix: "/api/auth/otp/"
                          route:
                            cluster: auth_service_http
                            timeout: 10s
                            retry_policy:
                              retry_on: connect-failure,refused-stream,reset
                              num_retries: 3
                              retry_back_off:
                                base_interval: 0.1s
                                max_interval: 1s
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                              disabled: true
                            envoy.filters.http.local_ratelimit:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                              stat_prefix: local_rate_limit_otp
                              token_bucket:
                                max_tokens: 5
                                tokens_per_fill: 5
                                fill_interval: 1s
                        - match:
                            prefix: "/api/auth/login"
                          route:
                            cluster: auth_service_http
                            timeout: 10s
                            retry_policy:
                              retry_on: connect-failure,refused-stream,reset
                              num_retries: 3
                              retry_back_off:
                                base_interval: 0.1s
                                max_interval: 1s
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                              disabled: true
                            envoy.filters.http.local_ratelimit:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                              stat_prefix: local_rate_limit_login
                              token_bucket:
                                max_tokens: 5
                                tokens_per_fill: 5
                                fill_interval: 1s
                        - match:
                            prefix: "/api/auth/refresh-tokens"
                          route:
                            cluster: auth_service_http
                            timeout: 10s
                            retry_policy:
                              retry_on: connect-failure,refused-stream,reset
                              num_retries: 3
                              retry_back_off:
                                base_interval: 0.1s
                                max_interval: 1s
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                              disabled: true
                        - match:
                            prefix: "/api/auth/forgot-password/"
                          route:
                            cluster: auth_service_http
                            timeout: 10s
                            retry_policy:
                              retry_on: connect-failure,refused-stream,reset
                              num_retries: 3
                              retry_back_off:
                                base_interval: 0.1s
                                max_interval: 1s
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                              disabled: true
                            envoy.filters.http.local_ratelimit:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                              stat_prefix: local_rate_limit_forgot_password
                              token_bucket:
                                max_tokens: 5
                                tokens_per_fill: 5
                                fill_interval: 1s
                        - match:
                            prefix: "/api/auth/logout"
                          route:
                            cluster: auth_service_http
                            timeout: 10s
                            retry_policy:
                              retry_on: connect-failure,refused-stream,reset
                              num_retries: 3
                              retry_back_off:
                                base_interval: 0.1s
                                max_interval: 1s
                        - match:
                            prefix: "/api/auth/me"
                          route:
                            cluster: auth_service_http
                            timeout: 10s
                            retry_policy:
                              retry_on: connect-failure,refused-stream,reset
                              num_retries: 3
                              retry_back_off:
                                base_interval: 0.1s
                                max_interval: 1s
                        - match:
                            prefix: "/api/auth/verify"
                          direct_response:
                            status: 403
                            body:
                              inline_string: '{"error":"Forbidden: Internal verify endpoint"}'
                        - match:
                            prefix: "/admin/envoy/"
                            headers:
                              - name: x-role
                                exact_match: User
                          route:
                            cluster: envoy_admin
                            prefix_rewrite: "/"
                            timeout: 10s
                            retry_policy:
                              retry_on: connect-failure,refused-stream,reset
                              num_retries: 3
                              retry_back_off:
                                base_interval: 0.1s
                                max_interval: 1s
                        - match:
                            prefix: "/admin/envoy/"
                          direct_response:
                            status: 403
                            body:
                              inline_string: '{"error":"Forbidden: Admin access only"}'
                        - match:
                            prefix: "/api/orders/health"
                          route:
                            cluster: order_service_http
                            timeout: 10s
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                              disabled: true
                        - match:
                            prefix: "/api/orders"
                          route:
                            cluster: order_service_http
                            timeout: 10s
                            retry_policy:
                              retry_on: connect-failure,refused-stream,reset
                              num_retries: 3
                              retry_back_off:
                                base_interval: 0.1s
                                max_interval: 1s
                        - match:
                            prefix: "/api/drones/health"
                          route:
                            cluster: fleet_service_http
                            timeout: 10s
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                              disabled: true
                        - match:
                            prefix: "/api/drones"
                          route:
                            cluster: fleet_service_http
                            timeout: 10s
                            retry_policy:
                              retry_on: connect-failure,refused-stream,reset
                              num_retries: 3
                              retry_back_off:
                                base_interval: 0.1s
                                max_interval: 1s
                        - match:
                            prefix: "/api/flight/health"
                          route:
                            cluster: flight_service_http
                            timeout: 10s
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                              disabled: true
                        - match:
                            prefix: "/api/flight"
                          route:
                            cluster: flight_service_http
                            timeout: 10s
                            retry_policy:
                              retry_on: connect-failure,refused-stream,reset
                              num_retries: 3
                              retry_back_off:
                                base_interval: 0.1s
                                max_interval: 1s
                        - match:
                            prefix: "/api/telemetry/health"
                          route:
                            cluster: telemetry_service_http
                            timeout: 10s
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                              disabled: true
                        - match:
                            prefix: "/api/telemetry"
                          route:
                            cluster: telemetry_service_http
                            timeout: 10s
                            retry_policy:
                              retry_on: connect-failure,refused-stream,reset
                              num_retries: 3
                              retry_back_off:
                                base_interval: 0.1s
                                max_interval: 1s
                        - match:
                            prefix: "/api/operations/health"
                          route:
                            cluster: operations_service_http
                            timeout: 10s
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                              disabled: true
                        - match:
                            prefix: "/api/operations"
                          route:
                            cluster: operations_service_http
                            timeout: 10s
                            retry_policy:
                              retry_on: connect-failure,refused-stream,reset
                              num_retries: 3
                              retry_back_off:
                                base_interval: 0.1s
                                max_interval: 1s
                        - match:
                            prefix: "/api/delivery/health"
                          route:
                            cluster: delivery_service_http
                            timeout: 10s
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                              disabled: true
                        - match:
                            prefix: "/api/delivery"
                          route:
                            cluster: delivery_service_http
                            timeout: 10s
                            retry_policy:
                              retry_on: connect-failure,refused-stream,reset
                              num_retries: 3
                              retry_back_off:
                                base_interval: 0.1s
                                max_interval: 1s
                        - match:
                            prefix: "/api/payment/health"
                          route:
                            cluster: payment_service_http
                            timeout: 10s
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                              disabled: true
                        - match:
                            prefix: "/api/payment"
                          route:
                            cluster: payment_service_http
                            timeout: 10s
                            retry_policy:
                              retry_on: connect-failure,refused-stream,reset
                              num_retries: 3
                              retry_back_off:
                                base_interval: 0.1s
                                max_interval: 1s
                        - match:
                            prefix: "/api/warehouse/health"
                          route:
                            cluster: warehouse_service_http
                            timeout: 10s
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                              disabled: true
                        - match:
                            prefix: "/api/warehouse"
                          route:
                            cluster: warehouse_service_http
                            timeout: 10s
                            retry_policy:
                              retry_on: connect-failure,refused-stream,reset
                              num_retries: 3
                              retry_back_off:
                                base_interval: 0.1s
                                max_interval: 1s
                        - match:
                            prefix: "/api/analytics/health"
                          route:
                            cluster: analytics_service_http
                            timeout: 10s
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                              disabled: true
                        - match:
                            prefix: "/api/analytics"
                          route:
                            cluster: analytics_service_http
                            timeout: 10s
                            retry_policy:
                              retry_on: connect-failure,refused-stream,reset
                              num_retries: 3
                              retry_back_off:
                                base_interval: 0.1s
                                max_interval: 1s
                        - match:
                            prefix: "/redpanda"
                          route:
                            cluster: redpanda_console
                            timeout: 10s
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                              disabled: true
                        - match:
                            prefix: "/"
                          route:
                            cluster: auth_service_http
                            timeout: 10s
                            retry_policy:
                              retry_on: connect-failure,refused-stream,reset
                              num_retries: 3
                              retry_back_off:
                                base_interval: 0.1s
                                max_interval: 1s
                http_filters:
                  - name: envoy.filters.http.local_ratelimit
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                      stat_prefix: http_local_rate_limiter
                      token_bucket:
                        max_tokens: 100
                        tokens_per_fill: 100
                        fill_interval: 1s
                      filter_enabled:
                        runtime_key: local_rate_limit_enabled
                        default_value:
                          numerator: 100
                          denominator: HUNDRED
                      filter_enforced:
                        runtime_key: local_rate_limit_enforced
                        default_value:
                          numerator: 100
                          denominator: HUNDRED
                  - name: envoy.filters.http.ext_authz
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                      grpc_service:
                        envoy_grpc:
                          cluster_name: auth_service_grpc
                        timeout: 2.0s
                      transport_api_version: V3
                      clear_route_cache: true
                  - name: envoy.filters.http.buffer
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.buffer.v3.Buffer
                      max_request_bytes: 10485760
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                common_http_protocol_options:
                  idle_timeout: 60s
                  max_connection_duration: 300s
                  headers_with_underscores_action: REJECT_REQUEST
                request_timeout: 10s
                max_request_headers_kb: 64
                stream_idle_timeout: 300s
                use_remote_address: true

  clusters:
    - name: auth_service_http
      connect_timeout: 2.0s
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      health_checks:
        - timeout: 1s
          interval: 5s
          unhealthy_threshold: 2
          healthy_threshold: 1
          http_health_check:
            path: /api/auth/health
      load_assignment:
        cluster_name: auth_service_http
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: auth-service
                      port_value: 8081
    - name: auth_service_grpc
      connect_timeout: 0.25s
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      http2_protocol_options: {}
      load_assignment:
        cluster_name: auth_service_grpc
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: auth-service
                      port_value: 50053
    - name: envoy_admin
      connect_timeout: 0.25s
      type: STATIC
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: envoy_admin
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 9901
    - name: redpanda_console
      connect_timeout: 2.0s
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: redpanda_console
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: redpanda-console
                      port_value: 8080
    - name: monitoring_service_cluster
      connect_timeout: 0.25s
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      http2_protocol_options: {}
      load_assignment:
        cluster_name: monitoring_service_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: monitoring-service
                      port_value: 50065
    - name: order_service_http
      connect_timeout: 2.0s
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      health_checks:
        - timeout: 1s
          interval: 5s
          unhealthy_threshold: 2
          healthy_threshold: 1
          http_health_check:
            path: /api/orders/health
      load_assignment:
        cluster_name: order_service_http
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: order-service
                      port_value: 8086
    - name: fleet_service_http
      connect_timeout: 2.0s
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      health_checks:
        - timeout: 1s
          interval: 5s
          unhealthy_threshold: 2
          healthy_threshold: 1
          http_health_check:
            path: /api/drones/health
      load_assignment:
        cluster_name: fleet_service_http
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: fleet-service
                      port_value: 8087
    - name: flight_service_http
      connect_timeout: 2.0s
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      health_checks:
        - timeout: 1s
          interval: 5s
          unhealthy_threshold: 2
          healthy_threshold: 1
          http_health_check:
            path: /api/flight/health
      load_assignment:
        cluster_name: flight_service_http
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: flight-service
                      port_value: 8088
    - name: telemetry_service_http
      connect_timeout: 2.0s
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      health_checks:
        - timeout: 1s
          interval: 5s
          unhealthy_threshold: 2
          healthy_threshold: 1
          http_health_check:
            path: /api/telemetry/health
      load_assignment:
        cluster_name: telemetry_service_http
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: telemetry-service
                      port_value: 8089
    - name: operations_service_http
      connect_timeout: 2.0s
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      health_checks:
        - timeout: 1s
          interval: 5s
          unhealthy_threshold: 2
          healthy_threshold: 1
          http_health_check:
            path: /api/operations/health
      load_assignment:
        cluster_name: operations_service_http
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: operations-service
                      port_value: 8090
    - name: delivery_service_http
      connect_timeout: 2.0s
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      health_checks:
        - timeout: 1s
          interval: 5s
          unhealthy_threshold: 2
          healthy_threshold: 1
          http_health_check:
            path: /api/delivery/health
      load_assignment:
        cluster_name: delivery_service_http
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: delivery-service
                      port_value: 8092
    - name: payment_service_http
      connect_timeout: 2.0s
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      health_checks:
        - timeout: 1s
          interval: 5s
          unhealthy_threshold: 2
          healthy_threshold: 1
          http_health_check:
            path: /api/payment/health
      load_assignment:
        cluster_name: payment_service_http
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: payment-service
                      port_value: 8093
    - name: warehouse_service_http
      connect_timeout: 2.0s
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      health_checks:
        - timeout: 1s
          interval: 5s
          unhealthy_threshold: 2
          healthy_threshold: 1
          http_health_check:
            path: /api/warehouse/health
      load_assignment:
        cluster_name: warehouse_service_http
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: warehouse-service
                      port_value: 8091
    - name: analytics_service_http
      connect_timeout: 2.0s
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      health_checks:
        - timeout: 1s
          interval: 5s
          unhealthy_threshold: 2
          healthy_threshold: 1
          http_health_check:
            path: /api/analytics/health
      load_assignment:
        cluster_name: analytics_service_http
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: analytics-service
                      port_value: 8094
